# scd41_sample

./: CMakeLists.txt  prj.conf
app/boards/: nrf52840dk_nrf52840.overlay
boards/: nrf52840dk_nrf52840.overlay
drivers/: CMakeLists.txt  KConfig
drivers/sensor/: CMakeLists.txt  Kconfig
drivers/sensor/scd4x/: scd4x.c  scd4x.h
dts/binding/sensor/: sensirion,scd41.yaml
include/zephyr/: scd4x.h
src/: main.c
